syntax = "proto3";

option csharp_namespace = "HireFire.Grpc";

service RecruiterService {

  rpc RegisterRecruiter (RegisterRecruiterRequest) returns (RecruiterResponse);

  rpc GetRecruitersForCompany (GetRecruitersForCompanyRequest)
      returns (GetRecruitersForCompanyResponse);

  rpc GetRecruiterById (GetRecruiterByIdRequest) returns (RecruiterResponse);

  rpc UpdateRecruiter (UpdateRecruiterRequest) returns (RecruiterResponse);
}

message RegisterRecruiterRequest {
  string email    = 1;
  string password_hash = 2;
  string name     = 3;
  string position = 4;
  int64 hired_by_representative_id = 5;
  int64 works_in_company_id = 6;
}

message RecruiterResponse {
  int64 id                 = 1;
  string email             = 2;
  string name              = 3;
  string position          = 4;
  int64 hired_by_id        = 5;
  int64 works_in_company_id = 6;
}

message GetRecruitersForCompanyRequest {
  int64 company_id = 1;
}

message GetRecruitersForCompanyResponse {
  repeated RecruiterResponse recruiters = 1;
}

message GetRecruiterByIdRequest {
  int64 id = 1;
}

message UpdateRecruiterRequest {
  int64 recruiter_id = 1;
  string email = 2;
  string name = 3;
  string password_hash = 4;
  string position = 5;
  int64 works_in_company_id = 6;
  int64 representative_id = 7;
}

